# nudge

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: spec.md
src/nudge/: __init__.py  __main__.py  cli.py  client.py  http_server.py  lock.py  server.py  session.py  sse.py
src/nudge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/nudge/core/: __init__.py  blob_store.py  matching.py  models.py  safety.py  scoring.py  store.py
src/nudge/utils/: __init__.py  context.py
tests/: __init__.py  conftest.py  test_batch.py  test_blob_cli.py  test_blob_endpoints.py  test_blob_export.py  test_blob_store.py  test_blob_tools.py  test_http_responses.py  test_http_server.py  test_matching.py  test_mcp_methods.py  test_protocol_compliance.py  test_proxy_compat.py  test_safety.py  test_session.py  test_session_lifecycle.py  test_sse.py  test_store.py
